<resources>
    <string name="app_name">WeatherApp-2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Select city</string>
    <string name="menu_gallery">Weather Today</string>
    <string name="menu_slideshow">History</string>
    <string name="menu_weather">Weather Today</string>
    <string name="home_second">Home Second</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_another_text">Set another text</string>
    <string name="start_text">Start text</string>
    <string name="this_is_another_fragment">This is another fragment</string>
    <string name="text_after_click">Text after click</string>
    <string name="replace_fragment">Replace fragment</string>
    <string name="city">Moscow</string>
    <string name="textView12">    Weather    </string>
    <string name="textView14"> |   Test14URA    |</string>
    <string name="today"> | Today  </string>
    <string name="tomorrow">  | Tomorrow  </string>
    <string name="dayAfter">  | Day after | </string>
    <string name="day">  Day     | </string>
    <string name="night">  Night | </string>
    <string name="empty_list" translatable="false">Empty list</string>
    <string name="ttodayday" translatable="false"> | 10° С  </string>
    <string name="ttodaynight" translatable="false"> | -1° С  </string>
    <string name="ttomorrowday" translatable="false">  | 12° С  </string>
    <string name="ttomorrownight" translatable="false">  | 3° С  </string>
    <string name="tdayAfterday" translatable="false">  | 11° С  </string>
    <string name="tdayAfternight" translatable="false">  | 4° С </string>
    <string name="settings">  Settings </string>
    <string name="air_pressure">  Display air pressure </string>
    <string name="wind_velocity">  Display wind velocity  </string>
    <string name="enter_city">  Please enter your city  </string>
    <string name="button_city1">  Moscow  </string>
    <string name="button_city2">  New York  </string>
    <string name="button_city3">  Washington  </string>
    <string name="button_city4">  London  </string>
    <string name="button_city5">  Berlin  </string>
    <string name="button_city6">  Paris  </string>
    <string name="button_city7">  Barcelona  </string>
    <string name="button_city8">  Minsk  </string>
    <string name="next">  Next  </string>
    <string name="switch_autolocation">   Automatic location detection  </string>
    <string name="switch_notiftcation">   Show temperature in notification </string>
    <string name="switch_temperatureincf">   Specify the temperature in F°  </string>
    <string name="switch_thrme">   Enable a dark theme  </string>
    <string name="configuration">   Сonfiguration  </string>
    <string name="back">   Back  </string>
    <string name="info">   Info  </string>
    <string name="weather_archive">   Archive  </string>
    <string name="dialog">   Select action please  </string>
    <string name="button_Configuration_text">   Configuration  </string>
    <string name="button_developer_info">   About us  </string>
    <string name="developer_info_txt">   This product was made with love for all people in the world!  </string>
    <string name="forecast_day_forecast">5 day Forecast</string>
    <string name="change_city">Change city</string>
    <string name="place_not_found">Place not found</string>
    <string name="weather_cloudy">https://cdn.pixabay.com/photo/2015/12/25/13/03/sky-1107579_960_720.jpg</string>
    <string name="weather_sunny">https://cdn.pixabay.com/photo/2017/11/04/08/14/tree-2916763_960_720.jpg</string>
    <string name="weather_foggy">https://cdn.pixabay.com/photo/2017/10/09/10/03/tree-2832925_960_720.jpg</string>
    <string name="weather_snowy">https://www.stockvault.net/data/2012/07/25/133014/preview16.jpg</string>
    <string name="weather_rainy">https://cdn.pixabay.com/photo/2018/05/31/13/13/rain-3443977_960_720.jpg</string>
    <string name="weather_drizzle">https://images.freeimages.com/images/large-previews/4ec/its-going-to-rain-1504568.jpg</string>
    <string name="weather_thunder">https://www.stockvault.net/data/2007/03/01/100244/preview16.jpg</string>
    <string name="weather_clear_night">https://cdn.pixabay.com/photo/2015/02/17/18/12/evening-lake-639699_960_720.jpg</string>
    <string name="search_hint">Введите город</string>
    <string name="text_instruction1">  Please select your city or enter it in the field below  </string>
    <string name="title_activity_new_main">NewMainActivity</string>
    <string name="element_number">Элемент номер </string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="action_not_found">Action not found</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="something_else">Something else</string>
    <string name="ok">Ok</string>
    <string name="title">UPS...</string>
    <string name="message">Can not find this city</string>
    <string name="button"> OK </string>
    <string name="message2">One or more fields not found in the JSON data</string>
    <string name="wi_day_cloudy_gusts">&#xf000;</string>
    <string name="wi_day_cloudy_windy">&#xf001;</string>
    <string name="wi_day_cloudy">&#xf002;</string>
    <string name="wi_day_fog">&#xf003;</string>
    <string name="wi_day_hail">&#xf004;</string>
    <string name="wi_day_lightning">&#xf005;</string>
    <string name="wi_day_rain_mix">&#xf006;</string>
    <string name="wi_day_rain_wind">&#xf007;</string>
    <string name="wi_day_rain">&#xf008;</string>
    <string name="wi_day_showers">&#xf009;</string>
    <string name="wi_day_snow">&#xf00a;</string>
    <string name="wi_day_sprinkle">&#xf00b;</string>
    <string name="wi_day_sunny_overcast">&#xf00c;</string>
    <string name="wi_day_sunny">&#xf00d;</string>
    <string name="wi_day_storm_showers">&#xf00e;</string>
    <string name="wi_day_thunderstorm">&#xf010;</string>
    <string name="wi_cloudy_gusts">&#xf011;</string>
    <string name="wi_cloudy_windy">&#xf012;</string>
    <string name="wi_cloudy">&#xf013;</string>
    <string name="wi_fog">&#xf014;</string>
    <string name="wi_hail">&#xf015;</string>
    <string name="wi_lightning">&#xf016;</string>
    <string name="wi_rain_mix">&#xf017;</string>
    <string name="wi_rain_wind">&#xf018;</string>
    <string name="wi_rain">&#xf019;</string>
    <string name="wi_showers">&#xf01a;</string>
    <string name="wi_snow">&#xf01b;</string>
    <string name="wi_sprinkle">&#xf01c;</string>
    <string name="wi_storm_showers">&#xf01d;</string>
    <string name="wi_thunderstorm">&#xf01e;</string>
    <string name="wi_windy">&#xf021;</string>
    <string name="wi_night_alt_cloudy_gusts">&#xf022;</string>
    <string name="wi_night_alt_cloudy_windy">&#xf023;</string>
    <string name="wi_night_alt_hail">&#xf024;</string>
    <string name="wi_night_alt_lightning">&#xf025;</string>
    <string name="wi_night_alt_rain_mix">&#xf026;</string>
    <string name="wi_night_alt_rain_wind">&#xf027;</string>
    <string name="wi_night_alt_rain">&#xf028;</string>
    <string name="wi_night_alt_showers">&#xf029;</string>
    <string name="wi_night_alt_snow">&#xf02a;</string>
    <string name="wi_night_alt_sprinkle">&#xf02b;</string>
    <string name="wi_night_alt_storm_showers">&#xf02c;</string>
    <string name="wi_night_alt_thunderstorm">&#xf02d;</string>
    <string name="wi_night_clear">&#xf02e;</string>
    <string name="wi_night_cloudy_gusts">&#xf02f;</string>
    <string name="wi_night_cloudy_windy">&#xf030;</string>
    <string name="wi_night_cloudy">&#xf031;</string>
    <string name="wi_night_hail">&#xf032;</string>
    <string name="wi_night_lightning">&#xf033;</string>
    <string name="wi_night_rain_mix">&#xf034;</string>
    <string name="wi_night_rain_wind">&#xf035;</string>
    <string name="wi_night_rain">&#xf036;</string>
    <string name="wi_night_showers">&#xf037;</string>
    <string name="wi_night_snow">&#xf038;</string>
    <string name="wi_night_sprinkle">&#xf039;</string>
    <string name="wi_night_storm_showers">&#xf03a;</string>
    <string name="wi_night_thunderstorm">&#xf03b;</string>
    <string name="wi_celsius">&#xf03c;</string>
    <string name="wi_cloud_down">&#xf03d;</string>
    <string name="wi_cloud_refresh">&#xf03e;</string>
    <string name="wi_cloud_up">&#xf040;</string>
    <string name="wi_cloud">&#xf041;</string>
    <string name="wi_degrees">&#xf042;</string>
    <string name="wi_down_left">&#xf043;</string>
    <string name="wi_down">&#xf044;</string>
    <string name="wi_fahrenheit">&#xf045;</string>
    <string name="wi_horizon_alt">&#xf046;</string>
    <string name="wi_horizon">&#xf047;</string>
    <string name="wi_left">&#xf048;</string>
    <string name="wi_night_fog">&#xf04a;</string>
    <string name="wi_refresh_alt">&#xf04b;</string>
    <string name="wi_refresh">&#xf04c;</string>
    <string name="wi_right">&#xf04d;</string>
    <string name="wi_sprinkles">&#xf04e;</string>
    <string name="wi_strong_wind">&#xf050;</string>
    <string name="wi_sunrise">&#xf051;</string>
    <string name="wi_sunset">&#xf052;</string>
    <string name="wi_thermometer_exterior">&#xf053;</string>
    <string name="wi_thermometer_internal">&#xf054;</string>
    <string name="wi_thermometer">&#xf055;</string>
    <string name="wi_tornado">&#xf056;</string>
    <string name="wi_up_right">&#xf057;</string>
    <string name="wi_up">&#xf058;</string>
    <string name="wi_wind_west">&#xf059;</string>
    <string name="wi_wind_south_west">&#xf05a;</string>
    <string name="wi_wind_south_east">&#xf05b;</string>
    <string name="wi_wind_south">&#xf05c;</string>
    <string name="wi_wind_north_west">&#xf05d;</string>
    <string name="wi_wind_north_east">&#xf05e;</string>
    <string name="wi_wind_north">&#xf060;</string>
    <string name="wi_wind_east">&#xf061;</string>
    <string name="wi_smoke">&#xf062;</string>
    <string name="wi_dust">&#xf063;</string>
    <string name="wi_snow_wind">&#xf064;</string>
    <string name="wi_day_snow_wind">&#xf065;</string>
    <string name="wi_night_snow_wind">&#xf066;</string>
    <string name="wi_night_alt_snow_wind">&#xf067;</string>
    <string name="wi_day_sleet_storm">&#xf068;</string>
    <string name="wi_night_sleet_storm">&#xf069;</string>
    <string name="wi_night_alt_sleet_storm">&#xf06a;</string>
    <string name="wi_day_snow_thunderstorm">&#xf06b;</string>
    <string name="wi_night_snow_thunderstorm">&#xf06c;</string>
    <string name="wi_night_alt_snow_thunderstorm">&#xf06d;</string>
    <string name="wi_solar_eclipse">&#xf06e;</string>
    <string name="wi_lunar_eclipse">&#xf070;</string>
    <string name="wi_meteor">&#xf071;</string>
    <string name="wi_hot">&#xf072;</string>
    <string name="wi_hurricane">&#xf073;</string>
    <string name="wi_smog">&#xf074;</string>
    <string name="wi_alien">&#xf075;</string>
    <string name="wi_snowflake_cold">&#xf076;</string>
    <string name="wi_stars">&#xf077;</string>
    <string name="wi_moon_full">&#xf078;</string>
    <string name="wi_moon_waxing_gibbous">&#xf079;</string>
    <string name="wi_moon_waxing_quarter">&#xf07a;</string>
    <string name="wi_moon_waxing_crescent">&#xf07b;</string>
    <string name="wi_moon_young">&#xf07c;</string>
    <string name="wi_moon_new">&#xf07d;</string>
    <string name="wi_moon_old">&#xf07e;</string>
    <string name="wi_moon_waning_crescent">&#xf080;</string>
    <string name="wi_moon_waning_quarter">&#xf081;</string>
</resources>